--- a/index.html
+++ b/index.html
@@ -1233,8 +1233,78 @@
                 margin: 0.5rem 0;
             }
 
+            /* Reduzir espaçamentos gerais para mobile */
             section {
+                padding: 2.5rem 0;
+            }
+
+            .hero-section {
                 padding: 3rem 0;
+            }
+
+            .testimonials-section,
+            .social-proof {
+                padding: 2rem 0;
+            }
+
+            /* Ocultar testimonials extras no mobile (mostrar apenas 4) */
+            .testimonial-card:nth-child(n+5) {
+                display: none;
+            }
+
+            .testimonial-card.show-mobile {
+                display: block;
+            }
+
+            /* Ocultar meses extras da curadoria no mobile (mostrar apenas 6) */
+            .curadoria-section .month-card:nth-child(n+7) {
+                display: none;
+            }
+
+            .curadoria-section .month-card.show-mobile {
+                display: block;
+            }
+
+            /* Reduzir padding interno de cards no mobile */
+            .reason-item {
+                padding: 1.5rem;
+            }
+
+            .structure-card {
+                padding: 1.5rem;
+            }
+
+            .pricing-card {
+                padding: 1.5rem;
+            }
+
+            .month-card {
+                padding: 1.5rem;
+            }
+
+            /* Ajustes visuais para pricing cards no mobile */
+            .pricing-card h3 {
+                font-size: 1.5rem;
+                margin-top: 0.5rem;
+            }
+
+            .pricing-features li {
+                font-size: 0.95rem;
+                padding: 0.5rem 0;
+            }
+
+            .pricing-features li i {
+                font-size: 1rem;
+            }
+
+            .pricing-savings {
+                font-size: 0.85rem;
+                padding: 0.4rem 0.8rem;
+            }
+
+            .pricing-badge {
+                font-size: 0.8rem;
+                padding: 0.4rem 1.2rem;
             }
 
             .back-to-top {
@@ -1373,6 +1443,43 @@
                 animation-duration: 0.01ms !important;
                 animation-iteration-count: 1 !important;
                 transition-duration: 0.01ms !important;
+            }
+        }
+
+        /* Botões "Ver mais" para mobile */
+        .view-more-btn {
+            display: none;
+            background: var(--color-primary);
+            color: white;
+            border: 2px solid var(--color-primary);
+            padding: 0.875rem 2rem;
+            border-radius: 50px;
+            font-weight: 600;
+            font-size: 1rem;
+            margin: 2rem auto 0;
+            cursor: pointer;
+            transition: var(--transition);
+            text-align: center;
+        }
+
+        .view-more-btn:hover {
+            background: var(--color-dark);
+            border-color: var(--color-dark);
+            transform: translateY(-2px);
+        }
+
+        .view-more-btn i {
+            margin-left: 0.5rem;
+            transition: transform 0.3s ease;
+        }
+
+        .view-more-btn.expanded i {
+            transform: rotate(180deg);
+        }
+
+        @media (max-width: 768px) {
+            .view-more-btn {
+                display: block;
             }
         }
     </style>
@@ -1548,6 +1655,13 @@
                             <i class="bi bi-search-plus me-2"></i>Clique para ampliar
                         </div>
                     </div>
+                </div>
+
+                <!-- Botão Ver mais depoimentos (apenas mobile) -->
+                <div class="text-center">
+                    <button class="view-more-btn" id="viewMoreTestimonials">
+                        Ver mais depoimentos <i class="bi bi-chevron-down"></i>
+                    </button>
                 </div>
             </div>
         </section>
@@ -1737,6 +1851,13 @@
                             <span class="book-theme">Luto e Amor</span>
                         </article>
                     </div>
+                </div>
+
+                <!-- Botão Ver curadoria completa (apenas mobile) -->
+                <div class="text-center">
+                    <button class="view-more-btn" id="viewMoreBooks">
+                        Ver curadoria completa 2026 <i class="bi bi-chevron-down"></i>
+                    </button>
                 </div>
 
                 <div class="text-center mt-5">
@@ -2703,6 +2824,59 @@
                 feedbackModal.style.display = 'none';
             }, 300);
             document.body.style.overflow = ''; // Restore scrolling
+        }
+
+        // ========================================
+        // MOBILE VIEW MORE BUTTONS
+        // ========================================
+
+        // Ver mais depoimentos
+        const viewMoreTestimonials = document.getElementById('viewMoreTestimonials');
+        if (viewMoreTestimonials) {
+            viewMoreTestimonials.addEventListener('click', function() {
+                const hiddenTestimonials = document.querySelectorAll('.testimonial-card:nth-child(n+5)');
+                const isExpanded = this.classList.contains('expanded');
+
+                hiddenTestimonials.forEach(testimonial => {
+                    if (isExpanded) {
+                        testimonial.classList.remove('show-mobile');
+                    } else {
+                        testimonial.classList.add('show-mobile');
+                    }
+                });
+
+                this.classList.toggle('expanded');
+                this.innerHTML = isExpanded
+                    ? 'Ver mais depoimentos <i class="bi bi-chevron-down"></i>'
+                    : 'Ver menos depoimentos <i class="bi bi-chevron-up"></i>';
+            });
+        }
+
+        // Ver mais livros da curadoria
+        const viewMoreBooks = document.getElementById('viewMoreBooks');
+        if (viewMoreBooks) {
+            viewMoreBooks.addEventListener('click', function() {
+                const hiddenBooks = document.querySelectorAll('.curadoria-section .month-card:nth-child(n+7)');
+                const isExpanded = this.classList.contains('expanded');
+
+                hiddenBooks.forEach(book => {
+                    if (isExpanded) {
+                        book.classList.remove('show-mobile');
+                    } else {
+                        book.classList.add('show-mobile');
+                    }
+                });
+
+                this.classList.toggle('expanded');
+                this.innerHTML = isExpanded
+                    ? 'Ver curadoria completa 2026 <i class="bi bi-chevron-down"></i>'
+                    : 'Ver menos <i class="bi bi-chevron-up"></i>';
+
+                // Scroll suave para o início da seção se estiver recolhendo
+                if (isExpanded) {
+                    document.querySelector('#curadoria').scrollIntoView({ behavior: 'smooth', block: 'start' });
+                }
+            });
         }
     </script>
 </body>
