"correção de português"

--- a/index.html
+++ b/index.html
@@ -2253,7 +2253,7 @@
                                 <li><i class="bi bi-check-circle-fill"></i> A cada três meses, um box digital com três entregáveis premium</li>
                                 <li><i class="bi bi-check-circle-fill"></i> Uma oficina de conceituação cognitiva com um personagem escolhido pelos alunos</li>
                                 <li><i class="bi bi-check-circle-fill"></i> Uma oficina de questionamento socrático</li>
-                                <li><i class="bi bi-check-circle-fill"></i> <strong>Kit Psicólogo Leitor - um conjunto de itens indispensáveis que chegará ate você para transformar seus momentos de leitura em uma experiência ireesistível</strong></li>
+                                <li><i class="bi bi-check-circle-fill"></i> <strong>Kit Psicólogo Leitor - um conjunto de itens indispensáveis que chegará ate você para transformar seus momentos de leitura em uma experiência irresistível</strong></li>
                             </ul>
                             <span class="pricing-savings">Economize 40%</span>
                             <a target="_blank" href="https://pay.hotmart.com/I103166310C?off=3czaf43a&bid=1764327432994" class="btn btn-cta w-100 mt-3">Assinar agora</a>
