"alterado o plano recomendado"

--- a/index.html
+++ b/index.html
@@ -2210,10 +2210,9 @@
                         </article>
                     </div>
 
-                    <!-- Plano Semestral - RECOMENDADO -->
+                    <!-- Plano Semestral -->
                     <div class="col-md-6 col-lg-3">
-                        <article class="pricing-card recommended">
-                            <span class="pricing-badge">Recomendado</span>
+                        <article class="pricing-card">
                             <h3>Semestral</h3>
                             <div class="pricing-price">
                                 R$397<span>/semestre</span>
@@ -2237,7 +2236,8 @@
 
                     <!-- Plano Anual -->
                     <div class="col-md-6 col-lg-3">
-                        <article class="pricing-card">
+                        <article class="pricing-card recommended">
+                            <span class="pricing-badge">Recomendado</span>
                             <h3>Anual</h3>
                             <div class="pricing-price">
                                 R$697<span>/ano</span>
@@ -2288,18 +2288,18 @@
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-3">
-                        <a target="_blank" href="https://pay.hotmart.com/I103166310C?off=vkkp5ph6&bid=1764328097175" class="btn btn-cta w-100 py-3" style="font-weight: 600; position: relative;">
-                            <span style="position: absolute; top: -10px; right: 10px; background: var(--color-accent); color: var(--color-dark); padding: 0.2rem 0.6rem; border-radius: 12px; font-size: 0.7rem; font-weight: 700;">RECOMENDADO</span>
+                        <a target="_blank" href="https://pay.hotmart.com/I103166310C?off=vkkp5ph6&bid=1764328097175" class="btn btn-outline-light w-100 py-3" style="font-weight: 600;">
                             <div style="font-size: 0.85rem; opacity: 0.95;">SEMESTRAL</div>
                             <div style="font-size: 1.3rem; margin: 0.3rem 0;">R$397</div>
-                            <div style="font-size: 0.75rem; opacity: 0.95;">Economize 30%</div>
+                            <div style="font-size: 0.75rem; color: var(--color-accent);">Economize 30%</div>
                         </a>
                     </div>
                     <div class="col-md-6 col-lg-3">
-                        <a target="_blank" href="https://pay.hotmart.com/I103166310C?off=3czaf43a&bid=1764327432994" class="btn btn-outline-light w-100 py-3" style="border: 2px solid rgba(255,255,255,0.3); font-weight: 600;">
+                        <a target="_blank" href="https://pay.hotmart.com/I103166310C?off=3czaf43a&bid=1764327432994" class="btn btn-cta w-100 py-3" style="border: 2px solid rgba(255,255,255,0.3); font-weight: 600; position: relative;">
+                            <span style="position: absolute; top: -10px; right: 10px; background: var(--color-accent); color: var(--color-dark); padding: 0.2rem 0.6rem; border-radius: 12px; font-size: 0.7rem; font-weight: 700;">RECOMENDADO</span>
                             <div style="font-size: 0.85rem; opacity: 0.9;">ANUAL</div>
                             <div style="font-size: 1.3rem; margin: 0.3rem 0;">R$697</div>
-                            <div style="font-size: 0.75rem; color: var(--color-accent);">Economize 40%</div>
+                            <div style="font-size: 0.75rem; opacity: 0.95;">Economize 40%</div>
                         </a>
                     </div>
                 </div>
@@ -2466,12 +2466,12 @@
         <div class="container">
             <div class="conversion-bar-content">
                 <div class="conversion-bar-text">
-                    <h3>🎯 Oferta Especial: Plano Semestral</h3>
-                    <p>Economize 30% e garanta 6 meses de transformação literária e clínica. Vagas limitadas!</p>
+                    <h3>🎯 Oferta Especial: Plano Anual</h3>
+                    <p>Economize 40% e garanta 12 meses de transformação literária e clínica. Vagas limitadas!</p>
                 </div>
                 <div class="conversion-bar-cta">
-                    <span class="conversion-bar-badge">30% OFF</span>
-                    <a target="_blank" href="https://pay.hotmart.com/I103166310C?off=vkkp5ph6&bid=1764328097175" class="btn btn-cta">
+                    <span class="conversion-bar-badge">40% OFF</span>
+                    <a target="_blank" href="https://pay.hotmart.com/I103166310C?off=3czaf43a&bid=1764327432994" class="btn btn-cta">
                         <i class="bi bi-star-fill me-2"></i>Quero o plano recomendado
                     </a>
                 </div>
